samples/_failures_safe/1761206230_d1151d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa375f0b.c: In function ‘bfs’:
./samples/SAFE/__tmp_aa375f0b.c:165:13: error: expected expression at end of input
  165 |             if (neighbor &&
      |             ^~
./samples/SAFE/__tmp_aa375f0b.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa375f0b.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa375f0b.c:165:13: error: expected declaration or statement at end of input
